Fixes tab reflow on mobile

--- a/assets/sass/_dashboard.scss
+++ b/assets/sass/_dashboard.scss
@@ -14,8 +14,8 @@
       padding-right: .5rem;
       color: #000;
       font-size: calc(18rem / var(--base-font-size));
-      margin-left: .5rem;
-      margin-right: .5rem;
+      margin-left: .25rem;
+      margin-right: .25rem;
       border: none;
       cursor: pointer;
       border-radius: .3rem;
@@ -24,6 +24,8 @@
     @media (min-width: 40rem) {
       button {
         font-size: calc(24rem / var(--base-font-size));
+        margin-left: .5rem;
+        margin-right: .5rem;
       }
     }
   
@@ -39,9 +41,12 @@
   
   #nav {
     border-bottom: .1rem solid rgba(var(--c-dark-rgb), .4);
+    display: flex;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
   
     button {
-      background-color: #fff;
+      background-color: rgba(2, 63, 159, 0.05);
       height: 3rem;
       padding-left: .6rem;
       padding-right: .6rem;
@@ -50,10 +55,11 @@
       margin-left: .2rem;
       margin-right: .2rem;
       margin-bottom: -.1rem;
-      border: .1rem solid #fff;
+      border: .1rem solid transparent;
       border-top-left-radius: .3rem;
       border-top-right-radius: .3rem;
       border-bottom: none;
+      min-width: 6rem;
       cursor: pointer;
     }
 
@@ -65,7 +71,16 @@
     button.selected {
       border: .1rem solid rgba(var(--c-dark-rgb), .4);
       border-bottom: .2rem solid #fff;
+      background-color: #fff;
       cursor:default;
+    }
+  }
+
+  @media (min-width: 40rem) {
+    #nav {
+      display: block;
+      overflow-x: initial;
+      -webkit-overflow-scrolling: initial;
     }
   }
 
